Basic permissions; Roles synced with DB and app state; Management controller;
